--- a/public/assets/css/Style.css
+++ b/public/assets/css/Style.css
@@ -19,14 +19,14 @@ header{
     margin: 0 auto;
 }
 .border{
-    border: 2px solid black;
+    border: 2px solid gray;
 }
 .btn{
     padding: 10px 20px;
     background-color: #AED0FF;
     border: #1D476B solid 1px;
     text-decoration: none;
-    color: black;
+    color: gray;
     display: inline-block;
     margin: 5px;
     cursor: pointer;
@@ -56,7 +56,7 @@ header{
     justify-content: start;
 }
 .internal-in-h{
-    color: black;
+    color: gray;
     padding: 0;
     margin: 0;
 }
